--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,11 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../src/assets/js/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('.tabs').tabs();
+    });
+  </script>
 </body>
 
 </html>
