--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,13 @@
   <script src="../src/assets/js/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script>
+    // Tabs
     $(document).ready(function () {
       $('.tabs').tabs();
+    });
+    // Modal
+    $(document).ready(function () {
+      $('.modal').modal();
     });
   </script>
 </body>
